src/test/ui/error-codes/E0492.stderr
error[E0492]: cannot borrow a constant which may contain interior mutability, create a static instead
  --> $DIR/E0492.rs:4:34
   |
LL | static B: &'static AtomicUsize = &A;
   |                                  ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0492`.
